Added Navigation to Basic CSS3

--- a/0.Basic-CSS3/0.Inline-CSS/Inline.html
+++ b/0.Basic-CSS3/0.Inline-CSS/Inline.html
@@ -9,8 +9,13 @@
 
 <body>
     <!--Inline CSS means writing CSS rules inside the html tags-->
-    <h1 style="color: red;">Heading</h1>
+    <h1 style="color: red;">Basic CSS3</h1>
     <p style="font-weight: bold;">Pharagraph Text</p>
+    <br><hr>
+    <h1><a href="../1.Internal-CSS/Internal.html">Next Lesson >></a></h1>
+    <h2><a href="../Exercise/0.Inline-CSS.html">>>Inline Exercise<<</a></h2>
+    <h3><a href="../8.Colors-and-Text/1.Text.html">>>Last Basic Page<<</a></h3>
+    <hr>
 </body>
 
 </html>
