--- a/0.Basic-CSS3/1.Internal-CSS/Internal.html
+++ b/0.Basic-CSS3/1.Internal-CSS/Internal.html
@@ -18,6 +18,11 @@
 <body>
     <h1>Heading</h1>
     <p>Pharagraph Text</p>
+    <br><hr>
+    <h1><a href="../2.External-CSS/External.html">Next Lesson >></a></h1>
+    <h2><a href="../0.Inline-CSS/Inline.html">Previous Lesson <<</a></h2>
+    <h3><a href="../Exercise/1.Internal-CSS.html">>>Internal Exercise<<</a></h3>
+    <hr>
 </body>
 
 </html>
