--- a/0.Basic-CSS3/2.External-CSS/External.html
+++ b/0.Basic-CSS3/2.External-CSS/External.html
@@ -11,6 +11,11 @@
 <body>
     <h1>Heading</h1>
     <p>Paragraph Text</p>
+    <br><hr>
+    <h1><a href="../3.Comment-CSS/Comments.html">Next Lesson >></a></h1>
+    <h2><a href="../1.Internal-CSS/Internal.html">Previous Lesson <<</a></h2>
+    <h3><a href="../Exercise/2.External-CSS.html">External Exercise</a></h3>
+    <hr>
 </body>
 
 </html>
