--- a/0.Basic-CSS3/4.Linking-CSS/Linking.html
+++ b/0.Basic-CSS3/4.Linking-CSS/Linking.html
@@ -11,6 +11,10 @@
 <body>
     <h1>Heading</h1>
     <p>Paragraph Text</p>
+    <br><hr>
+    <h1><a href="../5.CSS-Selectors/0.Selector.html">Next Lesson >></a></h1>
+    <h2><a href="../3.Comment-CSS/Comments.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
