--- a/0.Basic-CSS3/5.CSS-Selectors/0.Selector.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/0.Selector.html
@@ -29,6 +29,10 @@
 <body>
     <h1>Heading</h1>
     <p>Pharagraph Text</p>
+    <br><hr>
+    <h2><a href="1.Universal-Selector.html">Next Lesson >></a></h1>
+    <h3><a href="../4.Linking-CSS/Linking.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
