--- a/0.Basic-CSS3/5.CSS-Selectors/2.Type-Selector.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/2.Type-Selector.html
@@ -35,6 +35,10 @@
 <body>
     <h1>Heading</h1>
     <p>Pharagraph Text</p>
+    <br><hr>
+    <h1><a href="3.Class-Selector.html">Next Lesson >></a></h1>
+    <h2><a href="1.Universal-Selector.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
