--- a/0.Basic-CSS3/5.CSS-Selectors/3.Class-Selector.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/3.Class-Selector.html
@@ -37,6 +37,10 @@
 <body>
     <h1 class="bg-black text-italic">Heading</h1>
     <p class="border-red">Pharagraph Text</p>
+    <br><hr>
+    <h1><a href="4.ID-Selector.html">Next Lesson >></a></h1>
+    <h2><a href="2.Type-Selector.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
