--- a/0.Basic-CSS3/5.CSS-Selectors/4.ID-Selector.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/4.ID-Selector.html
@@ -42,6 +42,10 @@
 <body>
     <h1 id="bg-black">Heading</h1>
     <p id="border-red">Pharagraph Text</p>
+    <br><hr>
+    <h1><a href="5.ID-Class.html">Next Lesson >></a></h1>
+    <h2><a href="3.Class-Selector.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
