--- a/0.Basic-CSS3/5.CSS-Selectors/5.ID-Class.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/5.ID-Class.html
@@ -47,7 +47,10 @@
 <body>
     <h1 class="green-border" id="red-border">ID Selector - Custom Name</h1>
     <h1 class="green-border text-italics" id="red-border">Class Selector - Custom Name</h1>
-    
+    <br><hr>
+    <h1><a href="6.Attribute-Selector.html">Next Lesson >></a></h1>
+    <h2><a href="4.ID-Selector.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
