--- a/0.Basic-CSS3/5.CSS-Selectors/6.Attribute-Selector.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/6.Attribute-Selector.html
@@ -32,6 +32,10 @@
     <p class="">This is a paragraph</p>
     <hr>
     <p class="color-blue">This is a paragraph</p>
+    <br><hr>
+    <h1><a href="7.Child-Selector.html">Next Lesson >></a></h1>
+    <h2><a href="5.ID-Class.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
