--- a/0.Basic-CSS3/5.CSS-Selectors/7.Child-Selector.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/7.Child-Selector.html
@@ -39,6 +39,10 @@
             This is Some text.
         </p>
     </div>
+    <br><hr>
+    <h1><a href="8.Descendant-Selector.html">Next Lesson >></a></h1>
+    <h2><a href="6.Attribute-Selector.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
