--- a/0.Basic-CSS3/5.CSS-Selectors/9.Adjacent-Sibling-Selector.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/9.Adjacent-Sibling-Selector.html
@@ -33,6 +33,10 @@
     </div>
     <h1>This is another tag</h1>
     <a href="#">Lorem ipsum</a>
+    <br><hr>
+    <h1><a href="10.General-Adjacent-Sibling-Selector.html">Next Lesson >></a></h1>
+    <h2><a href="8.Descendant-Selector.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
