--- a/0.Basic-CSS3/6.Pseudo-Class-and-Elements/0.Pseudo-Class.html
+++ b/0.Basic-CSS3/6.Pseudo-Class-and-Elements/0.Pseudo-Class.html
@@ -38,6 +38,10 @@
     <a href="#1">Home</a>
     <a href="#2">Contact</a>
     <a href="#3">About</a>
+    <br><hr>
+    <h1><a href="1.Pseudo-Element.html">Next Lesson >></a></h1>
+    <h2><a href="../5.CSS-Selectors/10.General-Adjacent-Sibling-Selector.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
