--- a/0.Basic-CSS3/6.Pseudo-Class-and-Elements/1.Pseudo-Element.html
+++ b/0.Basic-CSS3/6.Pseudo-Class-and-Elements/1.Pseudo-Element.html
@@ -28,6 +28,10 @@
 <body>
     <h1>Heading</h1>
     <p>This is a text which has first letter bigger.</p>
+    <br><hr>
+    <h1><a href="../7.CSS-Rules/0.Precedence.html">Next Lesson >></a></h1>
+    <h2><a href="0.Pseudo-Class.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
