--- a/0.Basic-CSS3/7.CSS-Rules/0.Precedence.html
+++ b/0.Basic-CSS3/7.CSS-Rules/0.Precedence.html
@@ -46,7 +46,12 @@
         <br>
         id has more precedence than class
     </div>
-    
+    <br>
+    <hr>
+    <h1><a href="1.Inheritance.html">Next Lesson >></a></h1>
+    <h2><a href="../6.Pseudo-Class-and-Elements/1.Pseudo-Element.html">Previous Lesson <<</a>
+    </h2>
+    <hr>
 </body>
 
 </html>
