--- a/0.Basic-CSS3/7.CSS-Rules/1.Inheritance.html
+++ b/0.Basic-CSS3/7.CSS-Rules/1.Inheritance.html
@@ -28,6 +28,12 @@
     <p class="black-screen">Lorem ipsum dolor sit amet consectetur adipisicing <a href="#">elit.</a> Quibusdam
         accusantium voluptates deleniti iste ipsum est sapiente, tempore a officia magni exercitationem possimus ad odio
         reprehenderit asperiores. Aliquam, provident! Ab, minus!</p>
+    <br>
+    <hr>
+    <h1><a href="2.Last-Win-Rules.html">Next Lesson >></a></h1>
+    <h2><a href="0.Precedence.html">Previous Lesson <<</a>
+    </h2>
+    <hr>
 </body>
 
 </html>
