--- a/0.Basic-CSS3/7.CSS-Rules/2.Last-Win-Rules.html
+++ b/0.Basic-CSS3/7.CSS-Rules/2.Last-Win-Rules.html
@@ -38,6 +38,10 @@
 
 <body>
     <h1 style="color: green;" class="text-red" id="text-red">Headings</h1>
+    <br><hr>
+    <h1><a href="3.Important-Rules.html">Next Lesson >></a></h1>
+    <h2><a href="1.Inheritance.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
