--- a/0.Basic-CSS3/7.CSS-Rules/3.Important-Rules.html
+++ b/0.Basic-CSS3/7.CSS-Rules/3.Important-Rules.html
@@ -11,7 +11,7 @@
         }
 
         h1 {
-            color: red!important;
+            color: red !important;
         }
 
         p {
@@ -38,6 +38,12 @@
 
 <body>
     <h1 style="color: green;" class="text-red" id="text-red">Headings</h1>
+    <br>
+    <hr>
+    <h1><a href="../8.Colors-and-Text/0.Colors.html">Next Lesson >></a></h1>
+    <h2><a href="2.Last-Win-Rules.html">Previous Lesson <<</a>
+    </h2>
+    <hr>
 </body>
 
 </html>
