--- a/0.Basic-CSS3/8.Colors-and-Text/0.Colors.html
+++ b/0.Basic-CSS3/8.Colors-and-Text/0.Colors.html
@@ -43,6 +43,12 @@
     <div class="redboxName">RED BOX - red</div>
     <br><br>
     <div class="redboxDarkName">RED BOX - darkred</div>
+    <br>
+    <hr>
+    <h1><a href="1.Text.html">Next Lesson >></a></h1>
+    <h2><a href="../7.CSS-Rules/3.Important-Rules.html">Previous Lesson <<</a>
+    </h2>
+    <hr>
 </body>
 
 </html>
