--- a/0.Basic-CSS3/8.Colors-and-Text/1.Text.html
+++ b/0.Basic-CSS3/8.Colors-and-Text/1.Text.html
@@ -26,7 +26,7 @@
             font-style: italic;
             font-weight: bold;
             text-transform: uppercase;
-            
+
             text-indent: 500px;
             text-shadow: 1px 1px 0px red;
         }
@@ -48,5 +48,12 @@
         perferendis non tempore omnis dolorum nam possimus quis excepturi! Similique necessitatibus vero inventore
         distinctio suscipit.</p>
 </body>
+<br>
+<hr>
+<h1><a href="../../1.Intermediate-CSS3/0.CSS-Box/0.DrawBox.html">Next Lesson >> Intermediate CSS3 << </a>
+</h1>
+<h2><a href="0.Colors.html">Previous Lesson << </a></h2>
+<h3><a href="../0.Inline-CSS/Inline.html">>> First Basic Page << </a></h3>
+<hr>
 
 </html>
