--- a/0.Basic-CSS3/3.Comment-CSS/Comments.html
+++ b/0.Basic-CSS3/3.Comment-CSS/Comments.html
@@ -17,7 +17,10 @@
 </head>
 
 <body>
-
+    <br><hr>
+    <h1><a href="../4.Linking-CSS/Linking.html">Next Lesson >></a></h1>
+    <h2><a href="../2.External-CSS/External.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
