--- a/0.Basic-CSS3/5.CSS-Selectors/1.Universal-Selector.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/1.Universal-Selector.html
@@ -26,6 +26,10 @@
 <body>
     <h1>Heading</h1>
     <p>Pharagraph Text</p>
+    <br><hr>
+    <h1><a href="2.Type-Selector.html">Next Lesson >></a></h1>
+    <h2><a href="0.Selector.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
