--- a/0.Basic-CSS3/5.CSS-Selectors/8.Descendant-Selector.html
+++ b/0.Basic-CSS3/5.CSS-Selectors/8.Descendant-Selector.html
@@ -38,6 +38,10 @@
             This is Some text.
         </p>
     </div>
+    <br><hr>
+    <h1><a href="9.Adjacent-Sibling-Selector.html">Next Lesson >></a></h1>
+    <h2><a href="7.Child-Selector.html">Previous Lesson <<</a></h2>
+    <hr>
 </body>
 
 </html>
