--- a/0.Basic-CSS3/Exercise/0.Inline-CSS.html
+++ b/0.Basic-CSS3/Exercise/0.Inline-CSS.html
@@ -14,6 +14,9 @@
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
+        <br><hr>
+        <h1><a href="../0.Inline-CSS/Inline.html">Back<<</a></h1>
+        <hr>
     </ul>
 </body>
 
