--- a/0.Basic-CSS3/Exercise/1.Internal-CSS.html
+++ b/0.Basic-CSS3/Exercise/1.Internal-CSS.html
@@ -24,6 +24,9 @@
         <li>Item 2</li>
         <li>Item 3</li>
     </ul>
+    <br><hr>
+    <h1><a href="../1.Internal-CSS/Internal.html">Back<<</a></h1>
+    <hr>
 </body>
 
 </html>
