--- a/0.Basic-CSS3/Exercise/2.External-CSS.html
+++ b/0.Basic-CSS3/Exercise/2.External-CSS.html
@@ -16,6 +16,9 @@
         <li>Item 2</li>
         <li>Item 3</li>
     </ul>
+    <br><hr>
+    <h1><a href="../2.External-CSS/External.html">Back<<</a></h1>
+    <hr>
 </body>
 
 </html>
